# Cpp_Learn

hello_word/: CMakeLists.txt  main  main.cpp  main.ii
study_data/: 1013  STUDY_FUNPTR  glib
study_data/ProgrammingPatterns/: DesignPatterns
test_project/: CMakeLists.txt  main.cpp  readme
test_project/inc/: Dangling_references.h  Iostream.h  Perfect_Forwarding.h  Value_Category.h
test_project/src/: Dangling_references.cpp  Iostream.cpp  Perfect_Forwarding.cpp  Value_Category.cpp
